# bbqs_projects_models

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
Abstract/: index.html
Approaches/: index.html
Behavior/: index.html
Boolean/: index.html
Collaborator/: index.html
CollectedDataType/: index.html
Curie/: index.html
DataAnalysisMethod/: index.html
DataModalities/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
Float/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
NIH_report/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
ORCID_id/: index.html
Objectidentifier/: index.html
Project/: index.html
Sensors/: index.html
SoftwareType/: index.html
Sparqlpath/: index.html
Species/: index.html
String/: index.html
Team/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
abstract/: index.html
award_id/: index.html
bbqs-projects-metadata/: index.html
bbqs_projects_metadata/: index.html
contents/: index.html
data/: bbqs_project_info.json
develope_hardware_type/: index.html
develope_software_type/: index.html
email/: index.html
erdiagram/: bbqs_projects_metadata.md
full_name/: index.html
id/: index.html
index_bbqs_projects_metadata/: index.html
investigators/: index.html
keywords/: index.html
linkml-schema/: bbqs_projects_metadata.yaml
name/: index.html
organization/: index.html
presentations/: index.html
produce_data_type/: index.html
(+76 files in other folders)
